--- a/hutomo/index.html
+++ b/hutomo/index.html
@@ -2,33 +2,44 @@
 <html lang="en" data-framework="javascript">
 	<head>
 		<meta charset="utf-8">
-		<title>To-Do Mark</title>
-		<link rel="stylesheet" href="css/app.css">
+		<title>VanillaJS • TodoMVC</title>
+		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
+		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 	</head>
 	<body>
-		<section id="todoapp">
-			<header id="header">
-				<h1>Todo</h1>
-				<input id="new-todo" placeholder="What needs to be done?" autofocus>
+		<section class="todoapp">
+			<header class="header">
+				<h1>todos</h1>
+				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
-			<section id="main">
-				<ul id="todo-list"></ul>
+			<section class="main">
+				<input class="toggle-all" type="checkbox">
+				<label for="toggle-all">Mark all as complete</label>
+				<ul class="todo-list"></ul>
 			</section>
-			<footer id="footer">
-				<span id="todo-count"></span>
-				<ul id="filters">
+			<footer class="footer">
+				<span class="todo-count"></span>
+				<ul class="filters">
 					<li>
 						<a href="#/" class="selected">All</a>
 					</li>
 					<li>
 						<a href="#/active">Active</a>
 					</li>
+					<li>
+						<a href="#/completed">Completed</a>
+					</li>
 				</ul>
-				<button id="clear-completed">Clear completed</button>
+				<button class="clear-completed">Clear completed</button>
 			</footer>
 		</section>
+		<footer class="info">
+			<p>Double-click to edit a todo</p>
+			<p>Created by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
+			<p>Refactored by <a href="https://github.com/cburgmer">Christoph Burgmer</a></p>
+			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-		<script src="js/config.js"></script>
+		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="js/helpers.js"></script>
 		<script src="js/store.js"></script>
 		<script src="js/model.js"></script>
